--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="header-seenon">Seen On</div>
         <div class="header-seenon-logo">
-            <div  class="images"><img src="/dist/images/logo-bbc (1).png" alt="bbc logo"></div>
+            <div  class="images"><img src="./images/logo-bbc (1).png" alt="bbc logo"></div>
             <div class="images"><img src="./images/logo-bi (1).png" alt="BI-logo"></div>
             <div class="images"><img src="./images/logo-forbes.png" alt="Forbes-logo"></div>
             <div class="images"> <img src="./images/logo-techcrunch.png" alt="TC-logo"></div>
